# Project-Group-Beta

./: .gitignore  Cargo.toml  README.md  schema.sql
src/: app_state.rs  doc.json  main.rs  postman_collection.json
src/controllers/: auth.rs  auth_guard.rs  cart.rs  mod.rs  order.rs  product.rs
src/models/: Cart.rs  Order.rs  Product.rs  User.rs  mod.rs
src/routers/: auth.rs  cart.rs  mod.rs  order.rs  product.rs
