[package]
name = "project-group-beta"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
argon2 = "0.5"
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
